[iOS] Fix SideSwipe jump after rotation

This CL updates the top margin of the SideSwipe image, which is
otherwise wrong after changing device orientation as the toolbar
height is different.

Bug: 869902
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I767ab0fa76fea9c538e4e2c4e1ad49bc86b0d652
Reviewed-on: https://chromium-review.googlesource.com/1158826
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581179}
Former-commit-id: 971b7ef9a9b023783d8ef6f4be3b3ab144854501